  marks (SF.net bug #2065330 - Eric Le Lay)

- don't log an error when the API docs are not available. Provide a link
  to the online docs instead (SF.net bug #1777806 - Eric Le Lay)

- Worked around a memory leak in Sun Java 6 where the sun.font.GlyphLayout is
  cached and reused while holding an instance to the char array
  (Björn "Vampire" Kautler)

}}}
{{{ API changes

- New method E ServiceManager.getService(Class<E> clazz, String name) to get
  service instance (Matthieu Casanova)

- Register api changed, it now contains Transferable (Matthieu Casanova)

- Added ThreadUtilities utility class (Matthieu Casanova)

- Removed deprecated objectfactory xml parser.

- File System Browser dynamic menu support (#2938170 - FranÃÂ§ois Rey)

- Added a method for unregistering macro handlers: Macros.unregisterHandler().

- bufferSet api rewritten. Now each editPane have its own bufferSet,
  does not share it with other editPanes. The bufferset scope is the
  same for all EditPanes. (Matthieu Casanova)

- Status bar widget : it is now possible to use labels starting with letters
  in status bar. (Matthieu Casanova)

- Removed long deprecated TextArea#isDragInProgress() and
  TextArea#setDragInProgress(). (SF.net patch #2809776,2936146 - Kevin Hunter)

- EditBus.send() will now always deliver messages on the AWT thread, although
  it can be called from any thread. (Marcelo Vanzin)

- Added EditBus.sendAsync(): this just enqueues messages to be send over
  the EditBus as soon as the AWT thread is not busy, and returns immediately.
   (Marcelo Vanzin)

- Added ability to tag classes with EditBus.EBHandler. This is only useful
  when tagging an EditPlugin class, and makes the plugin instance behave
  as if it implemented EBComponent (it's added to the bus when the plugin
  is activated). (Marcelo Vanzin)

- Temporary buffers do not send BufferUpdate.PROPERTIES_CHANGED messages anymore
  (patch #2932330) (Dale Anson)
